Changed page content, fixed the contact form

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								<img src="images/logo.svg" alt="value foods logo" class="logo">
 							</div>
 							<h1>Welcome<br>To Our Shop</h1>
-							<p class="major">A wholesale US based supplier of fresh ingredients for your restaurant(s) that values your <b>time</b> and <b>money</b>.</p>
+							<p class="major">A wholesale supplier of <strong>fresh ingredients</strong> for your restaurant(s) in the United States that values your <strong>time, money</strong>, and <strong>the health of your customers</strong>.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Take a look</a></li>
 							</ul>
@@ -45,8 +45,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Organic & Fresh</h2>
-							<p>Only organic fruits, vegetables, and whole grains keep for your success and the overall wellbeing of your customers. Everything we create is made from locally-grown, organic, wholesome ingredients – low in calories, fat, and sugar, but jam-packed with lean protein, fiber, vitamins, and minerals.</p>
-							<p>Our customers depend on us to deliver quality organic ingredients, and you will get exactly that with the best possible service when you order from us! Everything you will get is always fresh and never frozen.</p>
+							<p>Only organic fruits, vegetables, and whole grains should be used to ensure your success and the overall well-being of your customers. Our clients depend on us to deliver high-quality organic ingredients, and when you order from us, you will receive exactly that, as well as the best possible service! Everything we make is produced with locally grown, organic, and healthy ingredients that are high in lean protein, fiber, vitamins, and minerals.</p>
 						</div>
 						<div class="image">
 							<img src="images/organic.jpg" alt="" />
@@ -57,8 +56,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>At reasonable price</h2>
-							<p>In the 21st century, we believe that supplying healthy and organic ingredients shouldn’t have to be a challenge. </p>
-							<p>Thankfully, with our ingredient delivery service you will enjoy easy, free nationwide food delivery to your location with each order at reasonable price.</p>
+							<p>We feel that providing nutritious and organic products should not be difficult in this day and age. Fortunately, with our ingredient delivery service, you will be able to experience easy nationwide food delivery to your location with each order at a fair price.</p>
 						</div>
 						<div class="image">
 							<img src="images/price.jpg" alt="" />
@@ -71,27 +69,27 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>How we operate</h2>
-							<p>Our delivery service offers ingredients that are always:</p>
+							<p>Our delivery service provides ingredients that are always:</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
 									<h3>Affordable</h3>
-									<p>Affordable delivery service, which has your interests and overall wellbeing of your customers in mind.</p>
+									<p>Affordably priced delivery service that considers your interests as well as the overall well-being of your consumers.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-leaf"></span>
 									<h3>Organic & Healthy</h3>
-									<p>Our organic and healthy igredients are our way of life, and we're proud to help you do just that by offering you something you can use all season long.</p>
+									<p>We are proud to assist you by providing organic and nutritious ingredients that you can use throughout the season.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
 									<h3>Hassle-free</h3>
-									<p>The service is available 24/7, 7 days a week, so customers can order ingredients at any time. Just send us an email, and we'll reach back to you.</p>
+									<p>Customers can order ingredients at any time because the service is open 24 hours a day, seven days a week. Simply shoot us an email and we'll get back to you.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-bolt"></span>
 									<h3>Fast & Reliable</h3>
-									<p>Our fast and reliable delivery service will never fail you and your customers. With modern equipment, and a throught out dispatch system, delivery has become more and more reliable and faster. </p>
+									<p>Our fast and reliable delivery service will never let you or your customers down. Delivery has grown more reliable and faster as a result of sophisticated equipment and a well-organized dispatch system.</p>
 								</section>
 							</div>
 						</div>
@@ -154,8 +152,8 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Interested in purchasing?</h2>
-							<p>Please leave us a short message:</p>
-							<form method="post" action="#">
+							<p>Please leave us a short message and we'll reach back to you!</p>
+							<form name="contact" netlify>
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
@@ -188,7 +186,7 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; valuefoods. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; valuefoods by <a href="https://weimin.netlify.app/">Weimin</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
